# DevOps-Course-Starter

./: .dockerignore  .env  .env.template  .env.test  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-pipeline.yml
ansible/: .env.j2  inventory.yaml  playbook.yaml  todoapp.service
todo_app/: app.py  test_app.py
todo_app/data/: db_items.py  item.py  test_view_model.py  trello_items.py  view_model.py
todo_app/templates/: index.html
