[tool.poetry]
name = "todo-app"
version = "0.1.2"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = ["Corndell","Darryl"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.5"
python-dotenv = "^0.14.0"
requests = "^2.31.0"
pytest = "^8.0.1"
mongomock = "^4.2.0.post1"
pymongo = "^4.10.1"
pybson = "^0.5.9"
safety = "^3.2.10"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
